--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-DB_URL = "mongodb+srv://Yashmieen_77:Minnu@Yash@eshop.hy7ib.mongodb.net/"
+DB_URL = "mongodb+srv://Yashmieen_77:Minnu%40Yash@eshop.hy7ib.mongodb.net/"
